--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
-<!-- Write your HTML in this file -->
 <!DOCTYPE html>
-<
+<html lang="en">
+  <head>
+    <title>
+      <!-- it's a comment -->
+      
+    </title>
+    <link href=""
+  </head>
+  <body>
+    
+  </body>
+</html>
